@@ -4,36 +4,45 @@
 #
 # This can only be defined *once* in a namespace.
 #
+# @param app_pki_external_source
+#   * If pki = 'simp' or true, this is the directory from which certs will be
+#     copied, via pki::copy.  Defaults to /etc/pki/simp/x509.
+#
+#   * If pki = false, this variable has no effect.
+#
+# @param app_pki_dir
+#   This variable controls the basepath of $app_pki_key, $app_pki_cert,
+#   $app_pki_ca, $app_pki_ca_dir, and $app_pki_crl.
+#   It defaults to /etc/pki/simp_apps/freeradius/x509.
+#
+# @param app_pki_key
+#   Path and name of the private SSL key file
+#
+# @param app_pki_cert
+#   Path and name of the public SSL certificate
+#
+# @param app_pki_ca_dir
+#   Path to the CA.
+#
 # == Authors
 #
 # * Trevor Vaughan <tvaughan@onyxpoint.com>
 # * Nick Markowski <nmarkowski@keywcorp.com>
 #
 class freeradius::config(
-  $logdir      = '/var/log/freeradius'
+  $app_pki_external_source = simplib::lookup('simp_options::pki::source', { 'default_value' => '/etc/pki/simp/x509' }),
+  $app_pki_dir             = '/etc/pki/simp_apps/freeradius/x509',
+  $app_pki_cert            = "${app_pki_dir}/public/${facts['fqdn']}.pub",
+  $app_pki_key             = "${app_pki_dir}/private/${facts['fqdn']}.pem",
+  $app_pki_ca_dir          = "${app_pki_dir}/cacerts",
+  $logdir                  = '/var/log/freeradius'
 ) inherits freeradius {
 
-  file { $::freeradius::app_pki_dir:
-    ensure => 'directory',
-    owner  => 'root',
-    group  => 'root',
-    mode   => '0755'
-  }
-
   if $::freeradius::pki {
-    ::pki::copy { $::freeradius::app_pki_dir:
-      pki     => $::freeradius::pki,
-      source  => $::freeradius::app_pki_external_source,
-      group   => 'radiusd',
-      require => File[$::freeradius::app_pki_dir],
-    }
-  }
-  else {
-    file { "${::freeradius::app_pki_dir}/pki":
-      ensure => 'directory',
-      owner  => 'root',
-      group  => 'root',
-      mode   => '0640'
+    ::pki::copy { 'freeradius':
+      source => $app_pki_external_source,
+      pki    => $::freeradius::pki,
+      group  => 'radiusd',
     }
   }
 
