@@ -2,6 +2,19 @@
 #
 # Configure a Freeradius server.
 #
+# @param pki
+#   * If 'simp', include SIMP's pki module and use pki::copy to manage
+#     application certs in /etc/pki/simp_apps/freeradius/x509
+#   * If true, do *not* include SIMP's pki module, but still use pki::copy
+#     to manage certs in /etc/pki/simp_apps/freeradius/x509
+#   * If false, do not include SIMP's pki module and do not use pki::copy
+#     to manage certs.  You will need to appropriately assign a subset of:
+#     * app_pki_dir
+#     * app_pki_key
+#     * app_pki_cert
+#     * app_pki_ca
+#     * app_pki_ca_dir
+#
 # == Authors
 #
 # * Trevor Vaughan <tvaughan@onyxpoint.com>
@@ -9,8 +22,6 @@
 #
 class freeradius (
   $pki                     = simplib::lookup('simp_options::pki', { 'default_value' => false, 'value_type' => Variant[Boolean, Enum['simp']] }),
-  $app_pki_external_source = simplib::lookup('simp_options::pki::source', { 'default_value' => '/etc/pki/simp' }),
-  $app_pki_dir             = '/etc/radius_simp',
   $firewall                = simplib::lookup('simp_options::firewall', { 'default_value' => false, 'value_type' => Boolean }),
   $freeradius_name         = $::freeradius::params::freeradius_name,
   $freeradius_ver          = $::freeradius::params::freeradius_ver
